--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,14 @@ footer {
   bottom: 0;
   right: 0;
 }
+
+div > h3 {
+  margin-top: 5px;
+  background-color: #212529;
+  text-align: center;
+  color: white;
+}
+
+btn-warning {
+  color: white !important;
+}
